refactor: decouple parcel semantics from storage formats